--- a/Recipedia/Recipedia/Views/FindRecipe/Index.cshtml
+++ b/Recipedia/Recipedia/Views/FindRecipe/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<Recipedia.Models.WebRecipeResultDTO>?
 
+@{
+    ViewData["Title"] = "Find Recipe";
+}
+
 <div class="find-recipe-wrapper">
     <div class="input-container">
         <div class="input-header">
