--- a/Recipedia/Recipedia/Views/Home/Index.cshtml
+++ b/Recipedia/Recipedia/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@{
+	ViewData["Title"] = "Recipedia Home";
+}
 <div class="home-page-content">
 	<div class="welcome-container">
 		<div class="welcome-text">
