--- a/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
+++ b/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Recipedia</title>
     <link rel="icon" type="image/png" href="~/Images/Recipedia-icon.png" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Recipedia.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/recipes.css" />
-    <link rel="stylesheet" href="~/css/navbar.css" />
-    <link rel="stylesheet" href="~/css/modals.css" />
-    <link rel="stylesheet" href="~/css/FindRecipe.css" />
-    <link rel="stylesheet" href="~/css/MyRecipes.css" />
-    <link rel="stylesheet" href="~/css/GenerateRecipe.css" />
-    <link rel="stylesheet" href="~/css/Login.css" />
-    <link rel="stylesheet" href="~/css/Home.css" />
-    <link rel="stylesheet" href="~/css/Policy.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-…yourhash…" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/site.css?v=1.0" />
+    <link rel="stylesheet" href="/Recipedia.styles.css?v=1.0" />
+    <link rel="stylesheet" href="/css/recipes.css?v=1.0" />
+    <link rel="stylesheet" href="/css/navbar.css?v=1.0" />
+    <link rel="stylesheet" href="/css/modals.css?v=1.0" />
+    <link rel="stylesheet" href="/css/FindRecipe.css?v=1.0" />
+    <link rel="stylesheet" href="/css/MyRecipes.css?v=1.0" />
+    <link rel="stylesheet" href="/css/GenerateRecipe.css?v=1.0" />
+    <link rel="stylesheet" href="/css/Login.css?v=1.0" />
+    <link rel="stylesheet" href="/css/Home.css?v=1.0" />
+    <link rel="stylesheet" href="/css/Policy.css?v=1.0" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
