--- a/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
+++ b/Recipedia/Recipedia/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="~/css/MyRecipes.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/GenerateRecipe.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/Home.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/Policy.css" asp-append-version="true" />
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" />
